fixed mediaquery gap +add admin.html+icon scaling

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -56,8 +56,8 @@ nav {
 }
 
 .option>a>img {
-    width: 50%;
-    height:40%;
+    width: 50px;
+    height: 40px;
 }
 
 .option:active {
